--- a/index.html
+++ b/index.html
@@ -164,9 +164,16 @@
             }
         }
         .file-icon {
-            font-size: 2rem;
+            width: 40px;
+            height: 40px;
             margin-right: 1rem;
             flex-shrink: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: var(--light-accent);
+            border-radius: 0.75rem;
+            color: var(--primary-accent);
         }
         .file-details {
             flex-grow: 1;
@@ -199,7 +206,7 @@
                 <div class="login-logo">MHDS</div>
                 <p>Devam etmek için lütfen parolanızı girin.</p>
                 <div class="input-group">
-                    <input type="password" id="password" placeholder="••••••••">
+                    <input type="password" id="password" placeholder="Parola">
                     <button class="login-button" id="login-button">Giriş Yap</button>
                 </div>
                 <p id="login-error-message">Hatalı parola.</p>
@@ -212,11 +219,30 @@
             </header>
             <div class="file-list-container">
                 <ul class="file-list" id="file-list">
-                    <!-- Dosyalar buraya dinamik olarak eklenecek -->
-                </ul>
+                    </ul>
             </div>
         </main>
     </div>
+
+    <svg width="0" height="0" style="position:absolute;">
+        <defs>
+            <symbol id="icon-file-text" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="16" y1="13" x2="8" y2="13"></line>
+                <line x1="16" y1="17" x2="8" y2="17"></line>
+                <polyline points="10 9 9 9 8 9"></polyline>
+            </symbol>
+            <symbol id="icon-file-sheet" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="16" y1="13" x2="8" y2="13"></line>
+                <line x1="16" y1="17" x2="8" y2="17"></line>
+                <line x1="10" y1="9" x2="8" y2="9"></line>
+                <polyline points="15 9 15 18 12 18 12 9 15 9"></polyline>
+            </symbol>
+        </defs>
+    </svg>
 
     <script>
         const loginScreen = document.getElementById('login-screen');
@@ -230,13 +256,14 @@
             fileList.innerHTML = '';
             files.forEach((file, index) => {
                 const isSheet = file.name.includes('.xls') || file.name.includes('Listesi');
-                const fileTypeIcon = isSheet ? '📊' : '📄';
+                const iconId = isSheet ? '#icon-file-sheet' : '#icon-file-text';
                 const listItem = document.createElement('li');
                 listItem.className = 'file-item';
-                // Animasyon gecikmesi
                 listItem.style.animationDelay = `${index * 100}ms`;
                 listItem.innerHTML = `
-                    <div class="file-icon">${fileTypeIcon}</div>
+                    <div class="file-icon">
+                        <svg width="24" height="24"><use href="${iconId}" /></svg>
+                    </div>
                     <div class="file-details">
                         <div class="file-name">${file.name}</div>
                     </div>
@@ -261,16 +288,12 @@
                 const response = await fetch('/api/getFiles', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ password: password }) });
                 if (response.ok) {
                     const files = await response.json();
-                    
-                    // Animasyonlu geçiş
                     loginScreen.classList.add('hidden');
                     setTimeout(() => {
                         mainScreen.style.display = 'flex';
-                        // displayFiles'ı ana ekran göründükten sonra çağırıyoruz
                         displayFiles(files); 
-                        setTimeout(() => mainScreen.classList.add('visible'), 50); // Kısa bir gecikme ile animasyonu tetikle
+                        setTimeout(() => mainScreen.classList.add('visible'), 50);
                     }, 500);
-                    
                 } else {
                     loginErrorMessage.style.display = 'block';
                     passwordInput.value = '';
