--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         button {
             width: 100%;
             padding: 12px;
-            background-color: #6A5ACD; /* Mor tonu */
+            background-color: #6A5ACD;
             color: white;
             border: none;
             border-radius: 8px;
@@ -68,7 +68,7 @@
             justify-content: space-between;
         }
         .file-info { display: flex; align-items: center; }
-        .file-icon { font-size: 24px; margin-right: 12px; }
+        .file-icon { font-size: 20px; margin-right: 12px; }
         .file-name { color: #333; }
         .file-card a {
             text-decoration: none;
@@ -144,7 +144,7 @@
                 card.className = 'file-card';
                 card.innerHTML = `
                     <div class="file-info">
-                        <span class="file-icon">📄</span>
+                        <span class="file-icon">⭐</span>
                         <span class="file-name">${file.name}</span>
                     </div>
                     <a href="${file.url}" target="_blank">Düzenle</a>
