--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             text-align: center;
             color: #333;
             margin-top: 0;
-            font-size: 22px;
         }
         input[type="password"] {
             width: 100%;
@@ -40,12 +39,11 @@
             box-sizing: border-box;
             margin-top: 20px;
             text-align: center;
-            font-size: 16px;
         }
         button {
             width: 100%;
             padding: 12px;
-            background-color: #6A5ACD;
+            background-color: #5d3fd3;
             color: white;
             border: none;
             border-radius: 8px;
@@ -55,7 +53,7 @@
             cursor: pointer;
             transition: background-color 0.2s;
         }
-        button:hover { background-color: #483D8B; }
+        button:hover { background-color: #4a32a8; }
         #error-message { color: red; text-align: center; margin-top: 10px; display: none; }
         .file-card {
             background-color: #f8f8ff;
@@ -68,12 +66,12 @@
             justify-content: space-between;
         }
         .file-info { display: flex; align-items: center; }
-        .file-icon { font-size: 20px; margin-right: 12px; }
+        .file-icon { font-size: 24px; margin-right: 12px; }
         .file-name { color: #333; }
         .file-card a {
             text-decoration: none;
             background-color: #e6e6fa;
-            color: #6A5ACD;
+            color: #5d3fd3;
             padding: 8px 16px;
             border-radius: 8px;
             font-weight: bold;
